--- a/project/vipinstagram/disclaimer/id/index.html
+++ b/project/vipinstagram/disclaimer/id/index.html
@@ -62,7 +62,7 @@
                               <li>Jangan pakai web aplikasi buat daftar akun. Ini cuma webview, bukan browser sungguhan, terlalu banyak kekurangan bisa merusak proses registrasi, seperti unggah, salin/ tempel, dll. Gunakan browser sungguhan atau
                                 aplikasi resmi buat daftar akun. Gunakan aplikasi bila sudah punya akun buat unduh, bukan buat daftar akun baru!<br></li>
                               <li>Kamera tidka jalan pada Android 10 (API 29). Harap abaikan sampai ketemu solusi.<br></li>
-                              <li>Tautan ke kontent sensitif atau akun privat digawangi token sensitif-waktu. Artinya bisa hangus beberap detik kemudian. Bila gagal unduh gara-gara lelet atau lain hal, tautan akan hangus. Hapus unduhan gagal, dan
+                              <li>Tautan ke kontent sensitif atau akun privat digawangi token sensitif-waktu. Artinya bisa hangus beberapa detik kemudian. Bila gagal unduh gara-gara lelet atau lain hal, tautan akan hangus. Hapus unduhan gagal, dan
                                 unduh ulang.<br></li>
                               <li>Bila aplikasi macet, atau crash, harap coba ulang. Mungkin tidak terjadi terusa-terusan.<br></li>
                               <li>Akun dan IP Anda bisa kena b.a.n. Bikin bakup, banyak, VPN, proxy, dll., atau jangan gunakan fitur skrap!<br></li>
@@ -73,32 +73,34 @@
                           </div>
                         </details>
                         <details>
-                          <summary>Rincian</summary>
+                          <summary>Koleksi data</summary>
                           <div>
-                            <p>Aplikasi hanya meminjam mata Anda guna bisa mengunduh media. Kami hanya mengumpulkan laporan kerusakan dan interaksi pengguna menggunakan analitik pihak ketiga yang umum, dan melalui penyerahan laporan kerusakan dari
-                              Anda sendiri. Temukan laporan kerusakan di <b>Tentang > laporan kerusakan</b>. Jika Anda tidak mengirimkannya, tidak ada data yang dikirimkan kepada kami. Anda juga dapat melihat pratinjau data yang dikirimkan pada badan
-                              email sebelum pengiriman.</p>
-                            <p>Hal-hal berikut diperlukan untuk benar mengatasi kemungkinan solusi kerusakan: Lingkungan, versi Android, versi OS, versi VIP Downloader dan rasa, Model, Perangkat, Produk, SDK, Kerapatan layar dan resolusi. Data ini
-                              bersifat umum terkait tampilan. Bukan hal sensitif. Anda juga dapat menghapus beberapa info sesuai kebutuhan. Kami tidak membagikan data yang dikumpulkan. Keduanya semata-mata untuk meningkatkan pengalaman dan
-                              keterlibatan pengguna.</p>
+                            <p>Aplikasi ini tidak mengoleksi data sensitif atau akun Instagram, dll. milik Anda. Hanya meminjam mata Anda guna bisa mengunduh media. Kami hanya mengumpulkan laporan kerusakan dan interaksi pengguna menggunakan analitik pihak ketiga yang umum, dan melalui penyerahan laporan kerusakan dari
+                              Anda sendiri. Temukan laporan kerusakan di <b>Tentang > laporan kerusakan</b>. Jika Anda tidak mengirimkannya, tidak ada data yang dikirimkan kepada kami. Anda juga dapat melihat pratinjau data yang dikirimkan pada badan email sebelum pengiriman.</p>
+                            <p>Hal-hal berikut diperlukan untuk benar mengatasi kemungkinan solusi kerusakan: Lingkungan, versi Android, versi OS, versi VIP Downloader dan rasa, Model, Perangkat, Produk, SDK, Kerapatan layar dan resolusi. Data ini bersifat umum terkait tampilan. Bukan hal sensitif. Anda juga dapat menghapus beberapa info sesuai kebutuhan. Kami tidak membagikan data yang dikumpulkan. Keduanya semata-mata untuk meningkatkan pengalaman dan keterlibatan pengguna.</p>
+                          </div>
+                        </details>
+                        <details>
+                          <summary>Perizinan</summary>
+                          <div>
                             <p>VIP Downloader menawarkan fitur seperti menambah dan menghapus gambar atau video.</p>
                             <p>Fitur-fitur ini membutuhkan izin Anda. Tanpa izin ini, aplikasi lumpuh:</p>
                             <ul>
-                              <li>INTERNET untuk mengunduh gambar, atau video. Jika Anda tidak mengizinkan, tidak ada video atau foto yang akan ditampilkan. Sistem mungkin dapat memberikan sedikit bagian dari izin ini. Akses internet terbatas ini
-                                mungkin sudah cukup. Namun jika hal-hal tidak berfungsi dengan baik, pastikan untuk mengaktifkan izin yang diperlukan. <br></li>
+                              <li>INTERNET untuk mengunduh gambar, atau video. Sistem mungkin dapat memberikan sedikit bagian dari izin ini. Akses internet terbatas ini mungkin sudah cukup. Namun jika hal-hal tidak berfungsi dengan baik, pastikan untuk mengaktifkan izin yang diperlukan. <br></li>
                               <li>READ_EXTERNAL_STORAGE / WRITE_EXTERNAL_STORAGE untuk menyimpan foto dan video di kartu SD eksternal Anda. Tidak ada data pribadi Anda yang dibaca atau ditulis / ditimpa. <br></li>
                               <li>MEDIA_CONTENT_CONTROL untuk memutar dan menghentikan video.<br></li>
                               <li>SET_WALLPAPER / SET_WALLPAPER_HINTS untuk menetapkan gambar atau sampul video sebagai wallpaper.<br></li>
                             </ul>
-                            <p>Fitur hanya diaktifkan atas persetujuan sadar Anda sendiri. Anda akan dimintai izin sebelum menggunakan aplikasi ini. Periksa juga <b>Pengaturan > Izin</b> untuk mengaktifkan sisanya. Sekali lagi semua dinonaktifkan
-                              secara default sampai Anda mengaktifkannya. Jika tidak diizinkan, mereka tidak akan berfungsi. Tidak ada udang ditimpuk batu.</p>
+                            <p>Fitur hanya diaktifkan atas persetujuan sadar Anda sendiri. Anda akan dimintai izin sebelum menggunakan aplikasi ini. Periksa juga <b>Pengaturan > Izin</b> untuk mengaktifkan sisanya. Sekali lagi semua dinonaktifkan secara default sampai Anda mengaktifkannya. Jika tidak diizinkan, mereka tidak akan berfungsi. Tidak ada udang ditimpuk batu.</p>
+                          </div>
+                        </details>
+                        <details>
+                          <summary>Pengakuan</summary>
+                          <div>
                             <p>Aplikasi VIP Downloader berusaha untuk memanfaatkan kebaikan komponen arsitektur Android.</p>
                             <p>Namun ini tahap awal, harap diingat! Aplikasi ini belum teruji jutaan perangkat. Jika Anda menemukan bug atau cegukan, silakan gunakan Umpan Balik.</p>
-                            <p>Saya <b>Gaus Surahman</b>, pengembang aplikasi VIP Downloader, dan aplikasi ini, tidak berafiliasi dengan perusahaan Instagram, Twitter atau penyedia foto atau video ini, atau pun memilikinya. Saya tidak bertanggung
-                              jawab atas penyalahgunaan aplikasi ini. Merupakan tanggung jawab Anda sendiri untuk menggunakan, atau menyalahgunakan aplikasi ini. Konten yang ditampilkan dalam aplikasi bukan milik saya, atau VIP Downloader. Namun,
-                              jika 100% yakin bahwa Anda menemukan materi berhak cipta, harap hubungi saya terlebih dahulu, terima kasih, sehingga saya dapat menyelesaikannya, atau menghapusnya selamanya.</p>
-                            <p>Dengan menggunakan aplikasi ini, Anda mafhum bahwa Anda telah membaca semua info di atas dengan benar. Jika Anda memiliki pertanyaan, silakan hubungi kami. Lihat juga bagian <b>Tentang > Kebijakan privasi</b> untuk info
-                              terkait lainnya.</p>
+                            <p>Saya <b>Gaus Surahman</b>, pengembang aplikasi VIP Downloader, dan aplikasi ini, tidak berafiliasi dengan perusahaan Instagram, Twitter atau penyedia foto atau video ini, atau pun memilikinya. Saya tidak bertanggun jawab atas penyalahgunaan aplikasi ini. Merupakan tanggung jawab Anda sendiri untuk menggunakan aplikasi ini. Konten yang ditampilkan dalam aplikasi bukan milik saya, atau VIP Downloader. Namun, jika 100% yakin bahwa Anda menemukan materi berhak cipta, harap hubungi saya terlebih dahulu, terima kasih, sehingga saya dapat menyelesaikannya, atau menghapusnya selamanya.</p>
+                            <p>Dengan menggunakan aplikasi ini, Anda mafhum bahwa Anda telah membaca semua info di atas dengan benar. Jika Anda memiliki pertanyaan, silakan hubungi kami. Lihat juga bagian <b>Tentang > Kebijakan privasi</b> untuk info terkait lainnya.</p>
                           </div>
                         </details>
 
