--- a/project/vipinstagram/disclaimer/index.html
+++ b/project/vipinstagram/disclaimer/index.html
@@ -50,7 +50,7 @@
                               <li>Be sure to allow the required permissions when prompted, else features are crippled, useless.<br></li>
                               <li>Some ISPs like those in Indonesia block Reddit, Vimeo, etc. Use reliable non-free VPN, proxies, etc., or stay safe.<br></li>
                               <li>Please check your internet speed at fast.com, etc. Slow speed may result in broken downloads.<br></li>
-                              <li>Reddit videos have no sound. I have't been able to mux the audio, yet. Please ignore Reddit till future fixes.<br></li>
+                              <li>Reddit videos have no sound. I haven't been able to mux the audio, yet. Please ignore Reddit till future fixes.<br></li>
                               <li>Most convenient features of downloads are via the app web interface, not the official apps, nor external browsers. Check out <b>How to use</b><br></li>
                               <li>This app doesn't use official APIs. Meaning it may break when the sites change their internals. If it was working, then suddenly breaks, please report. Kindly do not submit negative reviews when this happens. It is
                                 simply beyond our power. We'll do our best to fix it ASAP thanks to your reports.<br></li>
@@ -58,13 +58,11 @@
                                 supported. Meaning download may break.<br></li>
                               <li>Some sites embed a post/ tweet in another post/ tweet like Reddit or Twitter. Downloading them only works for a stand alone post/ tweet, not the one embedded inside another. Just visit its original to download. Only
                                 Twitter videos are supported, not images, yet, except partially by long pressing them one by one.<br></li>
-                              <li>Do not use the app web interface to register accounts. It is just a webview, not real browser, too many limitations may break registration process, like upload, paste etc. Use real browsers or official apps for
-                                registrations. Only use it once you have an account to login and download, not to register a new one. This also means the web app is not as robust as the official apps. Please bear with it.<br></li>
+                              <li>Do not use the app web interface to register accounts. It is just a webview, not real browser, too many limitations may break registration process, like upload, paste etc. Use real browsers or official apps for registrations. Only use it once you have an account to login and download, not to register a new one. This also means the web app is not as robust as the official apps. Please bear with it.<br></li>
                               <li>Camera not working in Android 10 (API 29). Please ignore till the next fix.<br></li>
-                              <li>Links for sensitive contents and private accounts are gated with some time-sensitive tokens, identified by 3-5x times longer links. The links can expire any seconds. Once failed at slow internet connections, old
-                                links are expired already which cause broken downloads. Delete them, and re-download.<br></li>
+                              <li>Links for sensitive contents and private accounts are gated with some time-sensitive tokens, identified by 3-5x times longer links. The links can expire any seconds. Once failed at slow internet connections, old links are expired already which cause broken downloads. Delete them, and re-download.<br></li>
                               <li>If something is broken, unless it keeps happening, try restarting the app, and see if any better.<br></li>
-                              <li>Your accounts and IPs may be b.a.n.n.e.d. Have backups, VPN, proxies, etc., many, or never use scrape functionality!<br></li>
+                              <li>Do not use scrape functionality, unless you know what you are doing. Your accounts and IPs may be b.a.n.n.e.d. When banned, you cannot access the websites! Have backups, VPN, proxies, etc., many. If you don't undertand VPN, or proxies, please don't scrape!<br></li>
                               <li>One star is a mere hatred at Android. It took me literally 3000 hours to build this app. Kindly take it into consideration regardless its limitations.</li>
                             </ul>
 
@@ -73,10 +71,8 @@
                         <details>
                           <summary>Data collection</summary>
                           <div>
-                            <p>The app doesn't collect your social credentials, nor anything sensitive. It just borrows your authorized eyes under the hood. We do collect crash reports and user interactions using common third party analytics, and via your own conscious submission of the crash
-                              reports (<b>About > Crash report</b>). If you don't submit it, no data is sent to us. You can also remove the submitted data on the email body before submission.</p>
-                            <p>The following are needed to properly address potential crash solutions: Environment, Android version, OS version, VIP Downloader version and flavor, Model, Device, Product, SDK, Screen density and resolution. These data
-                              are generic to help troubleshoot and fix bugs. None is sensitive. You can also remove some info as needed. We do not share the collected data. Both are solely to improve user experience and engagement.</p>
+                            <p>The app doesn't collect your social credentials, nor anything sensitive. It just borrows your authorized eyes under the hood. We do collect crash reports and user interactions using common third party analytics, and via your own conscious submission of the crash reports (<b>About > Crash report</b>). If you don't submit it, no data is sent to us. You can also remove the submitted data on the email body before submission.</p>
+                            <p>The following are needed to properly address potential crash solutions: Environment, Android version, OS version, VIP Downloader version and flavor, Model, Device, Product, SDK, Screen density and resolution. These data are generic to help troubleshoot and fix bugs. None is sensitive. You can also remove some info as needed. We do not share the collected data. Both are solely to improve user experience and engagement.</p>
                           </div>
                         </details>
 
@@ -86,8 +82,7 @@
                             <p>The VIP Downloader offers features such as adding and deleting pictures or videos, storing files at external removable storage.</p>
                             <p>These features need your permissions. Without these permissions the app is crippled:</p>
                             <ul>
-                              <li>INTERNET to download pictures, or videos. The system may likely grant a little portion of this permission. This limited internet access may suffice. If however things
-                                do not function properly, be sure to enable the needed permissions.<br></li>
+                              <li>INTERNET to download pictures, or videos. The system may likely grant a little portion of this permission. This limited internet access may suffice. If however things do not function properly, be sure to enable the needed permissions.<br></li>
                               <li>READ_EXTERNAL_STORAGE/ WRITE_EXTERNAL_STORAGE to store photos and videos on your external SD card. None of your personal data is read or written/ overwritten.<br></li>
                               <li>MEDIA_CONTENT_CONTROL to play and stop the videos.<br></li>
                               <li>SET_WALLPAPER to set pictures or video covers as wallpapers.<br></li>
@@ -103,8 +98,7 @@
                             <p>The VIP Downloader strives to leverage Android architecture components goodness.</p>
                             <p>However it is at early stage, please bear in mind! It has not been battle-tested against million devices, yet. Should you find a bug or hiccup, please use the Feedback.</p>
                             <p>I am <b>Gaus Surahman</b>, the VIP Downloader app developer, and this app is, not affiliated to Instagram company or any of these photos or videos providers, nor own them. I am not held responsible for any abuse or misuse of this app. It is your own responsibility to use this app. The contents displayed in the application do not belong to me, or VIP Downloader. If however, you legal-proven 100% believe you find a copyrighted material, please contact me first, thank you, so I can resolve, or delete it for good.</p>
-                            <p>By using this app, you acknowledge that you have read all of the above info properly. Should you have any question, please get in touch. Also check out the <b>About > Privacy policy</b> section for more related info.
-                            </p>
+                            <p>By using this app, you acknowledge that you have read all of the above info properly. Should you have any question, please get in touch. Also check out the <b>About > Privacy policy</b> section for more related info.</p>
                             </div>
                         </details>
 
