--- a/project/vipinstagram/faq/id/index.html
+++ b/project/vipinstagram/faq/id/index.html
@@ -95,7 +95,7 @@
                             <ol>
                               <li>Ramban laman sampai ke bawah guna mengumpulkan tautan, dan naik lagi guna
                             verifikasi ulang. <br></li>
-                            </li>Pijit tombol Skrap, dan tunggu laba-laba beres bekerja.</li>
+                            <li>Pijit tombol Skrap, dan tunggu laba-laba beres bekerja.</li>
                             </ol>
                           </div>
                         </details>
@@ -182,12 +182,6 @@
                           </div>
                         </details>
                         <details>
-                          <summary>Dapatkah saya menyetel sampul video sebagai wallpaper juga?</summary>
-                          <div>
-                            Ya, cukup tekan tombol <b>Setel wallpaper</b> di galeri video. Untuk memiliki sampul video layar penuh, aktifkan <b>Bikin sampul video</b> di <b>Pengaturan > Personalisasi</b>. Ini dinonaktifkan untuk menghindari sampul yang tidak diinginkan. Hanya foto video kecil yang dibuat secara bawaan.
-                          </div>
-                        </details>
-                        <details>
                           <summary>Mengapa galeri berkedip saat tampil gambar besar?</summary>
                           <div>
                             Gambar pertama dimuat sebagai thumbnail kecil untuk menghindari masalah OutOfMemory. Setelah gambar fokus, versi gambar yang lebih besar menggantikan thumbnail.
@@ -208,7 +202,7 @@
                         <details>
                           <summary>Kiat!</summary>
                           <div>
-                            Pada dasarnya tap cepat atau ganda atau pinch zoom apa saja untuk mengakses tampilan biasa atau zoom. Jika ada yang rusak, coba mulai ulang aplikasi, dan lihat apakah bisa lebih baik.
+                            Pada dasarnya tap cepat, lambat atau ganda atau pinch zoom apa saja untuk mengakses tampilan biasa atau zoom. Jika ada yang rusak, coba mulai ulang aplikasi, dan lihat apakah bisa lebih baik.
                           </div>
                         </details>
                       </div>
