--- a/project/vipinstagram/faq/id/index.html
+++ b/project/vipinstagram/faq/id/index.html
@@ -74,6 +74,7 @@
                               <li>Hanya bisa unduh lewat <b>Salin tautan</b> pada akun publik</li>
                               <li>Tidak bisa skrap.</li>
                             </ul>
+                            Berhubung pembatasan privasi terbaru, harap isi akun mainan/ sembarang via <b>Setingan > Akun</b> agar bisa unduh privat dan publik. Tidak perlu same dengan akun resmi. Pastikan kedua akun harus follow akun privat yang sama agar bisa selaras dan sama-sama bisa buka/ unduh akun privat.
                           </div>
                         </details>
                         <details>
@@ -85,7 +86,7 @@
                             </li>
                             </ol>
                             <p>Aplikasi ini tidak membaca, tidak tahu, tidak menyimpan, juga tidak peduli perihal akun atau
-                            kata sandi Instagram Anda. Aplikasi hanya meminjam mata Anda guna bisa mengunduh media. Lihat selengkapnya pada cara pemakaian.</p>
+                            kata sandi Instagram Anda. Aplikasi hanya meminjam mata Anda guna bisa mengunduh media. Lihat selengkapnya pada <b>Cara pemakaian</b>.</p>
                           </div>
                         </details>
                         <details>
