--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -73,7 +73,7 @@
                               <li>can only download via Instagram <b>Copy link</b> at public or private accounts</li>
                               <li>can not scrape.</li>
                             </ul>
-                            Due to the latest restrictions, providing a dummy or nothing-to-lose Instagram account is required via <b>Settings > Private mode</b> in order to make it work for both public and private accounts. No need to be the same as the currently-in-use Instagram account, except for private accounts (or at least both accounts, if different, should follow the same private accounts).
+                            Due to the latest restrictions, providing a dummy or nothing-to-lose Instagram account is required via <b>Settings > Accounts</b> in order to make it work for both public and private accounts. No need to be the same as the currently-in-use Instagram account, except for private accounts (or at least both accounts, if different, should follow the same private accounts).
 
                           </div>
                         </details>
