--- a/project/vipinstagram/disclaimer/id/index.html
+++ b/project/vipinstagram/disclaimer/id/index.html
@@ -58,7 +58,7 @@
                                 mengunduh. Hanya video Twitter terdukung, bukan foto. Foto hanya bisa unduh ditekan lama pada foto, bukan via salin tautan.<br></li>
                               <li>Tautan ke kontent sensitif atau akun privat digawangi token sensitif-waktu. Artinya bisa hangus beberapa detik kemudian. Bila gagal unduh gara-gara lelet atau lain hal, tautan akan hangus. Hapus unduhan gagal, dan unduh ulang.<br></li>
                               <li>Bila aplikasi macet, atau crash, harap coba ulang. Mungkin tidak terjadi terusa-terusan.<br></li>
-                              <li>Akun dan IP Anda bisa kena b.a.n. Bikin bakup, banyak, VPN, proxy, dll., atau jangan gunakan fitur skrap!<br></li>
+                              <li>Akun dan IP Anda bisa kena b.a.n. Bila kena, tidak akan bisa akses situs. Bikin bakup, banyak, VPN berbayar, proxy, dll. VPN gratisan bisa menurunkan kecepatan dari 1MB jadi 100KB. Bila tidak paham, jangan skrap!<br></li>
                               <li>Bintang satu berarti kebencian di Android. Saya bikin aplikasi ini dalam tempo 3000 jam. Mohon jadi bahan pertimbangan terlepas segala kekurangannya.</li>
                             </ul>
                           </div>
@@ -71,6 +71,7 @@
                               <li>Video Reddit bisu. Harap maklum sampai ketemu solusi.<br></li>
                               <li>Kamera tidak jalan pada Android 10 (API 29). Harap abaikan sampai ketemu solusi.<br></li>
                               <li>Jangan pakai web aplikasi buat daftar akun. Ini cuma webview, bukan browser sungguhan, terlalu banyak kekurangan bisa merusak proses registrasi, seperti unggah, salin/ tempel, dll. Gunakan browser sungguhan atau aplikasi resmi buat daftar akun. Gunakan aplikasi bila sudah punya akun buat unduh, bukan buat daftar akun baru!<br></li>
+                              <li>TikTok buruk rupa pada tampilan webnya. Di luar kuasa kami.<br></li>
                             </ul>
                           </div>
                         </details>
