--- a/project/vipinstagram/disclaimer/index.html
+++ b/project/vipinstagram/disclaimer/index.html
@@ -57,7 +57,7 @@
                                 Twitter videos are supported, not images, yet, except partially by long pressing them one by one.<br></li>
                               <li>Links for sensitive contents and private accounts are gated with some time-sensitive tokens, identified by 3-5x times longer links. The links can expire any seconds. Once failed at slow internet connections, old links are expired already which cause broken downloads. Delete them, and re-download.<br></li>
                               <li>If something is broken, unless it keeps happening, try restarting the app, and see if any better.<br></li>
-                              <li>Do not use scrape functionality, unless you know what you are doing. Your accounts and IPs may be b.a.n.n.e.d. When banned, you cannot access the websites! Have backups, VPN, proxies, etc., many. If you don't undertand VPN, or proxies, please don't scrape!<br></li>
+                              <li>Do not use scrape functionality, unless you know what you are doing. Your accounts and IPs may be b.a.n.n.e.d. When banned, you cannot access the websites! Have backups, paid VPN, proxies, etc., many. Free VPNs may drop your speed from 1MB to 100KB. If you don't undertand, please don't scrape!<br></li>
                               <li>One star is a mere hatred at Android. It took me literally 3000 hours to build this app. Kindly take it into consideration regardless its limitations.</li>
                             </ul>
 
@@ -65,13 +65,14 @@
                         </details>
 
                         <details>
-                          <summary>Known bugs</summary>
+                          <summary>Known bugs/ issues</summary>
                             <ul>
                               <li>This app doesn't use official APIs. Meaning it may break when the sites change their internals. If it was working, then suddenly breaks, please report via <b>Feedback</b> form. Kindly do not submit negative reviews when this happens. It is
                                 simply beyond our power. We'll do our best to fix it ASAP thanks to your reports.<br></li>
                               <li>Reddit videos have no sound. I haven't been able to mux the audio, yet. Please ignore Reddit till future fixes.<br></li>
                               <li>Camera not working in Android 10 (API 29). Please ignore till the next fix.<br></li>
                               <li>Do not use the app web interface to register accounts. It is just a webview, not real browser, too many limitations may break registration process, like upload, paste etc. Use real browsers or official apps for registrations. Only use it once you have an account to login and download, not to register a new one. This also means the web app is not as robust as the official apps. Please bear with it.<br></li>
+                              <li>TikTok has poor UI for its web presence. Nothing we can about it.<br></li>
                             </ul>
                           </div>
                         </details>
