--- a/project/vipinstagram/disclaimer/id/index.html
+++ b/project/vipinstagram/disclaimer/id/index.html
@@ -54,11 +54,11 @@
                               <li>Fitur unduhan yang menyenangkan hanya bisa via web internal aplikasi, bukan aplikasi resmi atau browser luar. Periksa <b>Cara pemakaian</b><br></li>
                               <li>Semua unduhan hanya mungkin bila aset media tersimpan internal pada situs terdukung, atau jaringan mereka. Sejumlah situs seperti Reddit, atau Twitter, mengarahkan tautan ke luar seperti cnn.com, dll. Situs luar
                                 tidak terdukung. Harap cari media yang melekat ke situs terdukung.<br></li>
-                              <li>Sebagian situs seperti Reddit atau Twitter menempelkan postingan/ tweet di postingan lain. Unduhan hanya mungkin untuk postingan mandiri, bukan postingan yang ditempelkan. Tinggal kunjungi postingan asli guna
-                                mengunduh. Hanya video Twitter terdukung, bukan foto. Foto hanya bisa unduh ditekan lama pada foto, bukan via salin tautan.<br></li>
+                              <li>Sebagian situs seperti Reddit atau Twitter menempelkan postingan/ tweet di postingan lain. Unduhan hanya mungkin untuk postingan mandiri, bukan postingan yang ditempelkan. Tinggal kunjungi postingan asli guna mengunduh. Hanya video Twitter terdukung, bukan foto. Foto hanya bisa unduh ditekan lama pada foto, bukan via salin tautan.<br></li>
+                              <li>Video Youtube yang ditempel di Reddit, Twitter, dll. TIDAK didukung.<br></li>
                               <li>Tautan ke kontent sensitif atau akun privat digawangi token sensitif-waktu. Artinya bisa hangus beberapa detik kemudian. Bila gagal unduh gara-gara lelet atau lain hal, tautan akan hangus. Hapus unduhan gagal, dan unduh ulang.<br></li>
                               <li>Bila aplikasi macet, atau crash, harap coba ulang. Mungkin tidak terjadi terusa-terusan.<br></li>
-                              <li>Akun dan IP Anda bisa kena b.a.n. Bila kena, tidak akan bisa akses situs. Bikin bakup, banyak, VPN berbayar, proxy, dll. VPN gratisan bisa menurunkan kecepatan dari 1MB jadi 100KB. Bila tidak paham, jangan skrap!<br></li>
+                              <li>Jangan skrap! Akun dan IP Anda bisa kena b.a.n. Bila kena, tidak akan bisa akses situs. Bikin bakup, banyak, VPN berbayar, proxy, dll. VPN gratisan bisa menurunkan kecepatan dari 1MB jadi 100KB. Bila tidak paham, jangan skrap!<br></li>
                               <li>Bintang satu berarti kebencian di Android. Saya bikin aplikasi ini dalam tempo 3000 jam. Mohon jadi bahan pertimbangan terlepas segala kekurangannya.</li>
                             </ul>
                           </div>
@@ -71,7 +71,7 @@
                               <li>Video Reddit bisu. Harap maklum sampai ketemu solusi.<br></li>
                               <li>Kamera tidak jalan pada Android 10 (API 29). Harap abaikan sampai ketemu solusi.<br></li>
                               <li>Jangan pakai web aplikasi buat daftar akun. Ini cuma webview, bukan browser sungguhan, terlalu banyak kekurangan bisa merusak proses registrasi, seperti unggah, salin/ tempel, dll. Gunakan browser sungguhan atau aplikasi resmi buat daftar akun. Gunakan aplikasi bila sudah punya akun buat unduh, bukan buat daftar akun baru!<br></li>
-                              <li>TikTok buruk rupa pada tampilan webnya. Di luar kuasa kami.<br></li>
+                              <li>TikTok buruk rupa pada tampilan webnya. Di luar kuasa kita, harap maklum.<br></li>
                             </ul>
                           </div>
                         </details>
@@ -88,12 +88,12 @@
                             <p>VIP Downloader menawarkan fitur seperti menambah dan menghapus gambar atau video.</p>
                             <p>Fitur-fitur ini membutuhkan izin Anda. Tanpa izin ini, aplikasi lumpuh:</p>
                             <ul>
-                              <li>INTERNET untuk mengunduh gambar, atau video. Sistem mungkin dapat memberikan sedikit bagian dari izin ini. Akses internet terbatas ini mungkin sudah cukup. Namun jika hal-hal tidak berfungsi dengan baik, pastikan untuk mengaktifkan izin yang diperlukan. <br></li>
+                              <li>INTERNET untuk mengunduh gambar, atau video. Sistem mungkin otomatis memberikan izin ini. Akses internet terbatas ini mungkin sudah cukup. Namun jika hal-hal tidak berfungsi dengan baik, pastikan untuk mengaktifkan izin yang diperlukan.<br></li>
                               <li>READ_EXTERNAL_STORAGE / WRITE_EXTERNAL_STORAGE untuk menyimpan foto dan video di kartu SD eksternal Anda. Tidak ada data pribadi Anda yang dibaca atau ditulis / ditimpa. <br></li>
                               <li>MEDIA_CONTENT_CONTROL untuk memutar dan menghentikan video.<br></li>
                               <li>SET_WALLPAPER / SET_WALLPAPER_HINTS untuk menetapkan gambar atau sampul video sebagai wallpaper.<br></li>
                             </ul>
-                            <p>Fitur hanya diaktifkan atas persetujuan sadar Anda sendiri. Anda akan dimintai izin sebelum menggunakan aplikasi ini. Periksa juga <b>Pengaturan > Izin</b> untuk mengaktifkan sisanya. Sekali lagi semua dinonaktifkan secara default sampai Anda mengaktifkannya. Jika tidak diizinkan, mereka tidak akan berfungsi. Tidak ada udang ditimpuk batu.</p>
+                            <p>Fitur hanya diaktifkan atas persetujuan sadar Anda sendiri. Anda akan dimintai izin sebelum menggunakan aplikasi ini. Periksa juga <b>Pengaturan > Izin</b> untuk mengaktifkan sisanya. Sekali lagi semua dinonaktifkan secara bawaan sampai Anda mengaktifkannya. Jika tidak diizinkan, aplikasi tidak akan berfungsi optimal. Tidak ada udang ditimpuk batu.</p>
                           </div>
                         </details>
                         <details>
