--- a/project/vipinstagram/disclaimer/index.html
+++ b/project/vipinstagram/disclaimer/index.html
@@ -55,6 +55,7 @@
                                 supported. Meaning download may break.<br></li>
                               <li>Some sites embed a post/ tweet in another post/ tweet like Reddit or Twitter. Downloading them only works for a stand alone post/ tweet, not the one embedded inside another. Just visit its original to download. Only
                                 Twitter videos are supported, not images, yet, except partially by long pressing them one by one.<br></li>
+                              <li>Youtube videos embedded at Reddit, Twitter, etc. are NOT supported.<br></li>
                               <li>Links for sensitive contents and private accounts are gated with some time-sensitive tokens, identified by 3-5x times longer links. The links can expire any seconds. Once failed at slow internet connections, old links are expired already which cause broken downloads. Delete them, and re-download.<br></li>
                               <li>If something is broken, unless it keeps happening, try restarting the app, and see if any better.<br></li>
                               <li>Do not use scrape functionality, unless you know what you are doing. Your accounts and IPs may be b.a.n.n.e.d. When banned, you cannot access the websites! Have backups, paid VPN, proxies, etc., many. Free VPNs may drop your speed from 1MB to 100KB. If you don't undertand, please don't scrape!<br></li>
@@ -72,7 +73,7 @@
                               <li>Reddit videos have no sound. I haven't been able to mux the audio, yet. Please ignore Reddit till future fixes.<br></li>
                               <li>Camera not working in Android 10 (API 29). Please ignore till the next fix.<br></li>
                               <li>Do not use the app web interface to register accounts. It is just a webview, not real browser, too many limitations may break registration process, like upload, paste etc. Use real browsers or official apps for registrations. Only use it once you have an account to login and download, not to register a new one. This also means the web app is not as robust as the official apps. Please bear with it.<br></li>
-                              <li>TikTok has poor UI for its web presence. Nothing we can about it.<br></li>
+                              <li>TikTok has poor UI for its web presence. Nothing we can do about it.<br></li>
                             </ul>
                           </div>
                         </details>
