--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -100,8 +100,9 @@
                           </div>
                         </details>
                         <details>
-                          <summary>TikTok</summary>
+                          <summary>TikTok/ Likee/ SnackVideo</summary>
                           <div>
+                          These similar apps can follow the same procedures.
                           <ol>
                               <li><b>Video</b>:
                               <ul>
@@ -113,7 +114,8 @@
                                 <li>No supports.</li>
                               </ul>
                           </ol>
-                          <p>Be informed! The web interface lacks of search and listing features. You can however search <b>usernames</b> using the internal search provided by this app at the top right corner. You can also download videos directly from TikTok app. The only differences are slightly smaller size, and integrated organization with other video providers if using this app.</p>
+                          <p>Be informed! The web interface lacks of search and listing features. You can however search <b>usernames</b> using the internal search provided by this app at the top right corner. You can also download videos directly from TikTok app or its similar apps. The only differences are slightly smaller size, and integrated organization with other video providers if using this app.
+                          For SnackVideo, please use the <b>Copy link</b> via their apps as it has no usable website.</p>
 
                           <img src="https://gausarts.github.io/project/vipinstagram/howto/tiktok-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/tiktok-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/tiktok-large.jpg 1024w" alt="How to download TikTok videos easily with Android" />
 
