--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -151,7 +151,7 @@
                         <details>
                           <summary>Tips</summary>
                           <div>
-                            <p>If the images in this tutorial section are not visible, be sure to connect internet. <br><br>Be warned! Do not use the app web interface to register accounts. It is just a WebView, not real browser, too many limitations may break registration process, like upload, paste etc. Use real browsers or official apps for registrations. No phishing, just less sophisticated browser interface known as WebView. Only use it once you have an account to login and download, not to register a new one.</p>
+                            <p>If the images in this tutorial section are not visible, be sure to connect internet. <br><br>Be warned! Do not use the app web interface to register accounts. It is just a WebView, not real browser, too many limitations may break registration process, like upload, paste etc. Use real browsers or official apps for registrations. Almost similar to LITE versions of any official apps -- Twitter lite, Facebook lite, etc. Only less elaborated  / sophisticated. Use it once you have an account to login and download, not to register a new one.</p>
                             <p>If <b>Copy link</b> <em>outside the internal web app</em> is not working, please use the provided internal web app interface regardless its limitations, and follow the above-outlined directions strictly.</p>
                           </div>
                         </details>
